# mlx90640-library

./: CMakeLists.txt
functions/: MLX90640_API.cpp  MLX90640_I2C_Driver.cpp  MLX90640_SWI2C_Driver.cpp
headers/: MLX90640_API.h  MLX90640_I2C_Driver.h
